# gomokuAI

./: CMakeLists.txt  README.md
include/ai/: AGomokuAi.hpp  GomokuAi.hpp  IGomokuAi.hpp  MiniMax.hpp
include/ai/IterativeDeepening/: IDThread.hpp  IterativeDeepening.hpp
src/: main.cpp
src/ai/: GomokuAi.cpp  MiniMax.cpp
src/ai/IterativeDeepening/: IDThread.cpp  IterativeDeepening.cpp
